# heimdall

./: .coveragerc  .editorconfig  .gitignore  Dockerfile  Makefile  devspace.yaml  devspace_start.sh  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml
ansible/: deploy.yml
ansible/roles/heimdall/tasks/: main.yml
ansible/roles/heimdall/templates/: config.json.j2
src/heimdall/: __main__.py  app.py
src/heimdall/cli/: __init__.py
src/heimdall/web/handlers/: meta.py
src/heimdall/web/middlewares/: logging.py  metrics.py
tests/: conftest.py
