[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "heimdall"
version = "0.1.0"
description = "API Gateway for microservices"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
packages = [
    { include = "heimdall", from = "src" },
]

[tool.poetry.dependencies]
aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.3"}
aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.3.3"}
python = "^3.8"

[tool.poetry.dev-dependencies]
ansible = "2.10.1"
ansible-lint = "4.3.5"
ansible-modules-hashivault = "4.5.6"
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
jinja2 = "2.11.2"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
pytest-postgres = "*"
rope = "*"
ipython = "*"